--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,19 @@
  version: 2.1
  jobs:
-    build:
-      docker:
-        - image: circleci/node:4.8.2 # the primary container, where your job's commands are run
-      steps:
-        - checkout # check out the code in the project directory
-        - run: echo "hello world" # run the `echo` command
+    install:
+    docker:
+      - image: circleci/node:dubnium-browsers
+    working_directory: ~/repo
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - $CACHE_VERSION-dependencies-{{ checksum "package.json" }}
+            # fallback to using the latest cache if no exact match is found
+            - $CACHE_VERSION-dependencies-
+      - run: yarn global add node-gyp && yarn install
+      - save_cache:
+          paths:
+            - node_modules
+          key: $CACHE_VERSION-dependencies-{{ checksum "package.json" }}
+  
