--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,11 @@
         - checkout
         - restore_cache:
             keys:
-              - {{ .Environement.CACHE_VERSION}}-dependencies-{{ checksum "package.json" }}
+              - {{ .Environment.CACHE_VERSION}}-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
-              - {{ .Environement.CACHE_VERSION}}-dependencies-
+              - {{ .Environment.CACHE_VERSION}}-dependencies-
         - run: yarn global add node-gyp && yarn install
         - save_cache:
           paths:
             - node_modules
-          key: {{ .Environement.CACHE_VERSION}}-dependencies-{{ checksum "package.json" }}
+          key: {{ .Environment.CACHE_VERSION}}-dependencies-{{ checksum "package.json" }}
