--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,4 +15,4 @@
         - save_cache:
           paths:
             - node_modules
-          key: {{ .Environment.CACHE_VERSION }}-dependencies-{{ checksum "package.json" }}
+          key: dependencies-{{ .Environment.CACHE_VERSION }}-{{ checksum "package.json" }}
