--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,3 +16,39 @@
             paths:
               - node_modules
             key: dependencies-{{ .Environment.CACHE_VERSION }}-{{ checksum "package.json" }}
+
+  lint:
+    docker:
+      - image: circleci/node:dubnium
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - dependencies-{{ checksum "package.json" }}-{{ .Environment.CACHE_VERSION }}
+            # fallback to using the latest cache if no exact match is found
+            - dependencies-
+      - run : yarn lint && yarn format:check
+
+  test:
+    docker:
+      - image: circleci/node:dubnium
+    steps:
+      - checkout
+      - restore_cache:
+          keys:
+            - dependencies-{{ checksum "package.json" }}-{{ .Environment.CACHE_VERSION }}
+            # fallback to using the latest cache if no exact match is found
+            - dependencies-
+      - run : yarn test:ci
+
+workflows:
+  version: 2
+  build_lint_test:
+    jobs:
+      - build
+      - lint:
+          requires:
+            - build
+      - test:
+          requires:
+            - build
