--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,3 +49,35 @@
     - test:
        requires:
         - build
+
+jobs:
+  test:
+    docker:
+      - image: circleci/node:10
+      - image: circleci/postgres:10
+        environment:
+          POSTGRES_USER: circleci
+          POSTGRES_DB: circleci
+    environment:
+      NODE_ENV: test
+      POSTGRES_USER: circleci
+      POSTGRES_DB: circleci
+      JWT_SECRET: sekrit
+    steps:
+      - run:
+          name: Install ltree extension for Postgres
+          command: |
+            sudo apt-get update
+            sudo apt-get install postgresql-client
+            dockerize -wait tcp://localhost:3000 -timeout 1m
+            psql -U circleci -h localhost -p 3000 -c 'create extension ltree'
+      - checkout
+      - restore_cache:
+          key: v1-deps-{{ checksum "package.json" }}
+      - run: yarn install
+      - save_cache:
+          paths:
+            - node_modules
+          key: v1-deps-{{ checksum "package.json" }}
+      - run: yarn lint
+      - run: yarn test
