--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@
             - node_modules
           key: v1-deps-{{ checksum "package.json" }}
       - run: yarn lint
-      - run: yarn test
+      - run: yarn connect
 
 
  workflows:
