--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,6 +70,21 @@
       - run: yarn lint
       - run: yarn connect
 
+    build_docker_file_and_pushIt:
+      machine: true
+      steps:
+         - checkout
+         # start proprietary DB using private Docker image
+         # with credentials stored in the UI
+         - run: |
+             echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
+             docker run -d --name db company/proprietary-db:1.2.3
+
+         # build the application image
+         - run: docker build -t company/app:$CIRCLE_BRANCH .
+
+         # deploy the image
+         - run: docker push company/app:$CIRCLE_BRANCH
 
  workflows:
  build_and_test:
