--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@
   lint:
     docker:
       - image: circleci/node:10-buster
+    working_directory: ~/repo
     steps:
       - checkout
       - restore_cache:
