--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,6 @@
             - dependencies-{{ checksum "package.json" }}-{{ .Environment.CACHE_VERSION }}
               # fallback to using the latest cache if no exact match is found
             - dependencies-
-      - run: yarn lint && yarn format:check
 
   test:
    docker:
@@ -79,6 +78,7 @@
           name: yarn Doc
           command: yarn doc:build
       - store_artifacts:
+          path: doc-server
 
  workflows:
    build_and_test:
